--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
       "onAutoForward": "notify"
     }
   },
-  "postCreateCommand": "npm install && npm run build",
+  "postCreateCommand": "npm install && npm run dev",
   "customizations": {
     "vscode": {
       "extensions": [
